# advent-2025

./: Cargo.toml  README.md  rust-toolchain
examples/: run_day.rs
inputs/: day2.txt
src/: main.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  mod.rs
src/utils/: mod.rs
